css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Extras */

.txt-type > .txt {
    border-right: 0.1rem solid #fff;
    padding-right: 2px;
  }

/* Extras End */

.text-white { color: white;border-color: white; }
.text-black { color: black;border-color: black; }

.container {
    max-width: 1100px;
    margin: 0 auto;
}

body {
    width: 100vw;
    overflow-x: hidden;
}

/* NAVIGATION STYLES */

.active {
    border-bottom: 2px solid #ffa600b3;
}

.nav {
    width: 100%;
    top: 0;
    border-bottom: 1px solid #333;
    width: 100vw;
    background: rgba(51,51,51,.1);
    position: fixed;
    transition: all .4s ease;
    padding: 1.2rem;
    z-index: 2;
}

nav {
    font-size: 1.2rem;
    color:#ffffff;
    display: flex;
    justify-content: space-between;
    /* padding: 1rem; */
    flex-wrap: wrap;
}

.hamburger {
    display: none;
}

nav ul {
    flex-wrap: wrap;
    display: flex;
    list-style: none;
    align-items: center;
    justify-content: center;
}
ul li {
    margin: 0 1rem;
}

ul li a {
    text-decoration: none;
    color: white;
}

/* HEADER SECTION STYLES */

header {
    text-align: center;
    width: 100vw;
    height: 100vh;
    display: flex;
    background: rgba(0,0,0,.9);
    justify-content: center;
    align-items: center;
    color: white;
    padding: 2rem;
}
header::before {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0;
    left: 0;
    background: url(../images/header-bg.jpg) no-repeat center center/cover;
}

.showcase {
    font-size: 1.4rem;
    padding: 5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.showcase h1 {
    margin-bottom: 10px;
}
.showcase p {
    padding: 4px;
    margin-bottom: 10px;
}
.btn {
    text-decoration: none;
    padding: .8rem;
    border: 2px solid white;
    background: transparent;
    color: white;
    border-radius: 5px;
    transition: all .5s ease;
}

.btn-primary,.btn-dark:hover {
    color: black;
    background: white;
    border-color: transparent;
    transition: all .5s ease;
}

.btn-primary:hover,.btn-dark {
    border-color: orange;
    background: orange;
    color: white;
    transition: all .5s ease;
}

/* SCROLL TO TOP STYLES */

#scrollTop {
    visibility: hidden;
    width: 50px;
    height: 50px;
    font-size: 2rem;
    border-radius: 50%;
    background: #333;
    position: fixed;
    display: flex;
    justify-content:center;
    align-items: center;
    z-index: 1;
    color:white;
    bottom: 10px;
    right: 10px;
    transition: transform .5s ease;
    text-decoration: none;
}

#scrollTop:hover {
    transform: rotate(360deg);
}


/* ABOUT SECTION */

.section {
    /* background: red; */
    width: 100vw;
    padding: 1rem 0;
}

.title h1 {
    font-size: 2rem;
    text-align: center;
}
.title hr {
    border: none;
    width: 5%;
    background:orange;
    height: 5px;
    border-radius: 2px;
    margin: 0 auto;
    margin-bottom: 1rem;
}

.about-container {
    display: flex;
}
.abt-item {
    flex: 1;
    padding: 2rem;
}

#abt-image img {
    border-radius: 10px;
    box-shadow: 2px 2px 10px #333;
    max-width: 100%;
    padding: .6rem;
    /* background: black; */
}
#abt-info-content {
    padding: 1.2rem;
}
#abt-info-content .title * { 
    text-align: left;
    margin-left: 0;
}
#abt-info-content h2 {
    margin-bottom: 1rem;
}
#abt-info-content p {
    margin-bottom: .8rem;
}
.socials {
    display: flex;
    margin-bottom: 1rem;
    /* justify-content: space-evenly; */
}
.socials i {
    border-radius: 50%;
    margin: .4rem;
    padding: 10px;
    color: white;
    background-color: black;
    transition: background-color ease .4s,transform linear .4s;
}
.socials i:hover {
    color: white;
    background-color: orange;
    transform: scale(1.2) rotate(-360deg);
}

/* SKILLS SECTION STYLES */

#skills {
    position: relative;
    background: rgba(0, 0, 0, .9);
    color: white;
    text-transform: uppercase;
}
#skills::before {
    content: '';
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: url('../images/header-bg.jpg') no-repeat center center/cover;
    background-attachment: fixed;
}
#skills .title {
    margin-bottom: 2rem;
}
.sks {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    grid-gap: 0 4rem;
}

.sk-text {
    display: flex;
    justify-content: space-between;
}

.sk-bar {
    margin: 1rem 0;
    width: 100%;
    height: 1rem;
    background: #333;
}
.sk-bar-inner {
    width: 0;
    height: 100%;
    background: orange;
}

.projects {
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-gap: 1rem;
}
.project {
    overflow: hidden;
    height: 20rem;
    padding: .5rem;
    border-radius: 5px;
    box-shadow: 1px 1px 1rem #000;
}
.p-content {
     position: relative;
    width: 100%;
    height: 100%;
}
.p-content > .p-text {
    transform: scale(0);
}
.p-content .p-text {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 1rem;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background: #ffa600b3;
    /* transform: scale(0); */
    /* transform-origin: top left; */
    transition: transform linear .4s;
}
.p-text h1 {
    font-size: 2rem;
    margin-bottom: 1rem;
}

.p-content:hover .p-text {
    transform: scale(1) rotate(360deg);
}

.p-content .p-img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
}


/*************************************** 

PROJECT IMAGES AND HOVER EFFECTS

***************************************/
.project #p1 {
    background: url('../images/blackpink-fanpage.png');
    background-size: cover;
    transition: 1s;
}
.project:hover #p1 {
    background-position: bottom;
}
.project #p2 {
    background: url('../images/naruto-site.png');
    background-size: cover;
    transition: 1s;
}
.project:hover #p2 {
    background-position: bottom;
}
.project #p3 {
    background: url('../images/my-profile.png');
    background-size: cover;
    transition: 1s;
}
.project:hover #p3 {
    background-position: bottom;
}

/* MY SKILLS SECTION STYLES */

.services {
    display: flex;
    margin-bottom: 2rem;
}
.service {
    text-align: center;
    padding: 2rem;
    margin: .2rem;
    transform-origin: center;
    transition: all ease .4s;
    border-radius: 5px;
}
#my-services {
    background: rgba(0, 0, 0, .9);
    position: relative;
    color: white;
}

#my-services::after {
    content: '';
    background: url('../images/header-bg.jpg') no-repeat center center/cover;
    background-attachment: fixed;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
}

.service h1,.service i,.service hr {
    margin-top: .8rem;
    margin-bottom: .4rem;
}

.service hr {
    background: white;
    border: none;
    height: 2px;
}
.service:hover {
    color: orange;
    transform: scale(1.05);
    box-shadow: 2px 2px 10px orange;
}

.service:hover hr {
    background: orange;
}

#hire-me {
    background: orange;
    color: white;
}

.hire-me {
    display: flex;
    padding: 5px;
    justify-content: space-between;
    align-items: center;
}

.hire-me h1 {
    font-size: 2rem;
}
/* .hire-me .btn {
    color: orange;
}
.hire-me .btn:hover {
    color: white;
    border-color: white;
} */

.get-in-touch .socials {
    flex: 1;
}
.get-in-touch .socials {
    display: flex;
    margin-bottom: 1rem;
    justify-content: space-evenly;
}
.get-in-touch .socials i {
    font-size: 2rem;
    border-radius: 50%;
    margin: .4rem;
    padding: 20px;
    color: white;
    background-color: black;
    transition: background-color ease .4s,transform linear .4s;
}
.get-in-touch .socials i:hover {
    color: white;
    background-color: orange;
    transform: scale(1.2) rotate(-360deg);
}

/* FOOTER STYLES */

footer {
    background: #000;
    color: #ccc;
    padding: 1rem;
    text-align: center;
}

